--- a/onboarding/onboarding-3.html
+++ b/onboarding/onboarding-3.html
@@ -26,10 +26,10 @@
 
         <div style="display: flex; justify-content: center;" class="container">
               <div class="row">
-                  <div style="display: flex; padding-top:50px; border-bottom: solid 3px blue;" class="col-md-12">
-                  <div class="col-md-4"><p>Welcome</p></div>
-                    <div class="col-md-4"><p>Add Phone</p></div>
-                   <div class="col-md-4"><p>Login</p></div>
+                  <div style="display: flex; justify-content: center; padding-top:50px; border-bottom: solid 3px blue;" class="col-lg-12">
+                  <div class="col-sm-4 col-md-3"><p><strong>Welcome</strong></p></div>
+                    <div class="col-sm-4 col-md-3 offset-md-2"><p>Add Phone</p></div>
+                   <div class="col-sm-4 col-md-3 offset-md-2"><p>Login</p></div>
                     
                   </div></div></div>
 
