--- a/onboarding/onboarding-3.html
+++ b/onboarding/onboarding-3.html
@@ -27,9 +27,9 @@
         <div style="display: flex; justify-content: center;" class="container">
               <div class="row">
                   <div style="display: flex; justify-content: center; padding-top:50px; border-bottom: solid 3px blue;" class="col-lg-12">
-                  <div class="col-sm-4 col-md-3"><p><strong>Welcome</strong></p></div>
-                    <div class="col-sm-4 col-md-3 offset-md-2"><p>Add Phone</p></div>
-                   <div class="col-sm-4 col-md-3 offset-md-2"><p>Login</p></div>
+                  <div style="margin-left:20px; margin-right: 20px;" class="col-sm-3 col-md-3"><p><strong>Welcome</strong></p></div>
+                    <div style="margin-left: 20px; margin-right: 20px;" class="col-sm-5 col-md-4 offset-md-2"><p>Add Phone</p></div>
+                   <div style="margin-left: 20px; margin-right: 20px;" class="col-sm-4 col-md-3 offset-md-2"><p>Login</p></div>
                     
                   </div></div></div>
 
