Working files for onboarding process 1-6+ CSS

--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -8,12 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/css/main.css">
+    <link rel="stylesheet" href="stylesheets/css/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/qzo0syp.css">
 
     <title>Create your account</title>
   </head>
   <body>
-    <div style="background-color: blue; color: white;" class="container-fluid">
+    <div style="background-color: #1047A9; color: white;" class="container-fluid">
       <div class="row justify-content-between">
         <div class="col-md-3">
       <h2>Digital Gold</h2></div>
