--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/css/main.css">
     <link rel="stylesheet" href="stylesheets/css/header.css">
+    <link rel="stylesheet" href="stylesheets/css/buttons.css">
     <link rel="stylesheet" href="stylesheets/css/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/qzo0syp.css">
 
@@ -61,7 +62,8 @@
                 <label class="form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
               </div><br>
               <div class="form-row">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
+                  <button class="button button--rayen button--border-thin button--text-thick button--text-upper button--size-s" data-text="Sign Up"><span>Sign Up</span></button>
+                <!--<button type="submit" class="btn btn-primary">Sign Up</button>-->
               </div>
             <small id="accountHelp" class="form-text text-muted">Already have an account? <a href="#">Sign In</a></small>
             </form>
