--- a/onboarding/onboarding-2.html
+++ b/onboarding/onboarding-2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/css/main.css">
     <link rel="stylesheet" href="stylesheets/css/header.css">
+    <link rel="stylesheet" href="stylesheets/css/buttons.css">
     <link rel="stylesheet" href="https://use.typekit.net/qzo0syp.css">
 
     <title>Verify your email</title>
