buttons styled onboarding 1-6

--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -62,9 +62,10 @@
                 <label class="form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
               </div><br>
               <div class="form-row">
-                  <button class="button button--rayen button--border-thin button--text-thick button--text-upper button--size-s" data-text="Sign Up"><span>Sign Up</span></button>
+                  <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Sign Up"><span>Sign Up</span></button>
                 <!--<button type="submit" class="btn btn-primary">Sign Up</button>-->
               </div>
+              <div style="height: 1em;"></div>
             <small id="accountHelp" class="form-text text-muted">Already have an account? <a href="#">Sign In</a></small>
             </form>
             </div>
