--- a/onboarding/onboarding-6.html
+++ b/onboarding/onboarding-6.html
@@ -52,7 +52,7 @@
                   <h1 class="dg-onboard">Securely logged in</h1>
                 <p class="dg-onboard">You have successfully logged in. Go to dashboard to start using Digital Gold.</p>
                
-               <button type="submit" class="btn btn-primary">Go to Dashboard</button>
+                <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Go to Dashboard"><span>Go to Dashboard</span></button>
                 </div>
               </div></div>
 
