--- a/onboarding/onboarding-3.html
+++ b/onboarding/onboarding-3.html
@@ -52,7 +52,7 @@
                 <h1>Welcome to Digital Gold</h1><br><br>
                 <p style="font-size: 1.5rem;">Thanks for creating an account with Digital Gold. 2AF (two-factor authentication)<br> is required for all users, and greatly increases the security of your account.</p>
                <form action="onboarding-4.html">
-               <button type="submit" class="btn btn-primary">Continue</button>
+                  <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Continue"><span>Continue</span></button>
                </form>
                   </div>
               </div>
