--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheets/css/main.css">
     <link rel="stylesheet" href="stylesheets/css/header.css">
+    <link rel="stylesheet" href="stylesheets/css/forms.css">
     <link rel="stylesheet" href="stylesheets/css/animate.css">
     <link rel="stylesheet" href="https://use.typekit.net/qzo0syp.css">
 
@@ -19,7 +20,7 @@
     <div class="container-fluid">
       <div class="row header">
           <div class="col-md-2 col-xs-6 brand">
-              <h2>Digital Gold</h2>
+              <h2 class="dg-brand">Digital Gold</h2>
           </div>
       
           <div class="col-md-2 offset-md-8 col-xs-12 login">
@@ -30,49 +31,63 @@
     <!-- Header Bar End -->
 
     <!-- Form Start -->
-
-      <div class="flex-container-center">
-          <div class="row">
-            <div class="col-lg-12 col-md-12 col-xs-12">
-              <form action="onboarding-2.html">
+    <div class="flex-container-center">
+        <div class="row">
+          <div class="col-lg-12 col-md-12 col-xs-12">
+            <form action="onboarding-2.html">
                 <div class="form-row">
-                <div style="padding-top:50px;" class="col-md-12">
-                  <h1 class="pb-4">Create your account</h1>
-              <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="firstName">first</label>
-                <input type="text" class="form-control" id="inputFirstName1" aria-describedby="firstnameHelp" placeholder=""> 
-              </div>
-              <div class="form-group col-md-6">
-                <label for="lastName">last</label>
-                <input type="text" class="form-control" id="inputLastName1" placeholder="">
-              </div>
-              </div>
-              <div class="form-group">
-                  <label for="email">email</label>
-                  <input type="text" class="form-control" id="inputEmail1" placeholder="">
-              </div>
-              <div class="form-group">
-                  <label for="password">password</label>
-                  <input type="text" class="form-control" id="inputPassword1" placeholder="">
-              </div>
-              <div class="form-row form-check">
-                <input type="checkbox" class="form-check-input" id="Check1">
-                <label class="form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
-              </div><br>
-              <div class="form-row">
-                <button type="submit" class="btn btn-primary">Sign Up</button>
-              </div>
-            <small id="accountHelp" class="form-text text-muted">Already have an account? <a href="#">Sign In</a></small>
-            </form>
-            </div>
+                    <div style="padding-top:50px;" class="col-md-12">
+                      <h2 class="pb-4">Create your account</h2>
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <div>
+                            <input type="text" required>
+                            <div class="label-box">
+                              <label>First Name</label>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="form-group col-md-6">
+                        <div>
+                            <input type="text" required>
+                            <div class="label-box">
+                              <label>Last Name</label>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+              
+                <div class="form-group">
+                  <input type="text" required>
+                  <div class="label-box">
+                    <label>Email</label>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <input type="text" required>
+                  <div class="label-box">
+                    <label>Password</label>
+                  </div>
+                </div>
+
+                <div class="form-row form-check">
+                    <input type="checkbox" class="form-check-input" id="Check1">
+                    <label class="form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
+                  </div><br>
+                  <div class="form-row">
+                      <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Sign Up"><span>Sign Up</span></button>
+                  </div>
+                  <div style="height: 1em;"></div>
+                <small id="accountHelp" class="form-text text-muted">Already have an account? <a href="#">Sign In</a></small>
+                </form>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
-
 <!-- Form End -->
 
     <!-- Optional JavaScript -->
@@ -82,3 +97,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
   </body>
 </html>
+
