dg-form-label-check fix

--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -79,8 +79,9 @@
 
                 <div class="form-row form-check">
                     <input type="checkbox" class="form-check-input" id="Check1">
-                    <label class="form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
-                  </div><br>
+                    <label class="dg-form-check-label" for="Check1">By creating this account, you agree to our User Agreement and Privacy Policy</label>
+                  </div>
+                  <div style="height: 40px;"></div>
                   <div class="form-row">
                       <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Sign Up"><span>Sign Up</span></button>
                   </div>
