adding form styles grey background

--- a/onboarding/onboarding-4.html
+++ b/onboarding/onboarding-4.html
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="stylesheets/css/main.css">
    <link rel="stylesheet" href="stylesheets/css/header.css">
    <link rel="stylesheet" href="stylesheets/css/buttons.css">
+   <link rel="stylesheet" href="stylesheets/css/forms.css">
    <link rel="stylesheet" href="https://use.typekit.net/qzo0syp.css">
 
     
