update form styles and layout

--- a/onboarding/onboarding-2.html
+++ b/onboarding/onboarding-2.html
@@ -30,11 +30,9 @@
             <div class="flex-container-center">
                 <div class="row">
                     <div class="col-md-12 dg-column-start">
-      
-                    <h1>Verify your email</h1><br><br>
-                  <p>We sent an email to <a href="#">allison.campbell@apmex.com</a></p>
-                  <p><a href="#">Not the right email?</a></p>
-                  
+                    <h1 class="pb-5">Verify your email</h1>
+                        <p>We sent an email to <a href="#">allison.campbell@apmex.com</a></p>
+                        <p><a href="#">Not the right email?</a></p>
                   </div>
                  <div class="col-md-4 offset-md-4">
                   <img class="img-responsive placeholder" src="images/placeholder-1.png"></div>
