--- a/onboarding/onboarding-3.html
+++ b/onboarding/onboarding-3.html
@@ -49,8 +49,10 @@
               <div class="row">
                   <div class="col-md-12 dg-column-start">
     
-                <h1>Welcome to Digital Gold</h1><br><br>
-                <p style="font-size: 1.5rem;">Thanks for creating an account with Digital Gold. 2FA (two-factor authentication)<br> is required for all users, and greatly increases the security of your account.</p>
+                <h1 class="pb-5">Welcome to Digital Gold</h1>
+                <div class="dg-form-content">
+                  <p style="font-size: 1.5rem;">Thanks for creating an account with Digital Gold. 2FA (two-factor authentication) is required for all users, and greatly increases the security of your account.</p>
+                </div>
                <form action="onboarding-4.html">
                   <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Continue"><span>Continue</span></button>
                </form>
