onboarding pages spacing issues resolved

--- a/onboarding/onboarding-1.html
+++ b/onboarding/onboarding-1.html
@@ -38,7 +38,7 @@
             <form action="onboarding-2.html">
                 <div class="form-row">
                     <div class="mt-5 col-md-12">
-                      <h1 class="pb-5">Create your account</h1>
+                      <h1 class="pb-5 dg-onboard-title">Create your account</h1>
                     </div>
                 </div>
 
