--- a/onboarding/onboarding-5.html
+++ b/onboarding/onboarding-5.html
@@ -50,8 +50,8 @@
           <div class="flex-container-center">
               <div class="row">
                   <div class="mt-5 col-md-12">
-                    <h2 class="pb-3">Enter 2FA Confirmation Code</h2>
-                    <p class="pb-5" style="font-size: 1.5rem;"><strong>Step 1 of 2:</strong> Please enter the confirmation number sent to your cell phone.</p>
+                    <h2 class="pb-3 dg-onboard-title">Enter 2FA Confirmation Code</h2>
+                    <p class="pb-5 dg-onboard-text"><strong>Step 1 of 2:</strong> Please enter the confirmation number sent to your cell phone.</p>
                
                  <!-- FORM START -->
                      <div class="form-row">
@@ -73,7 +73,7 @@
                         <div class="clearfix"></div>
 
 
-               <small id="emailHelp" class="form-text text-muted">Didn't receive a code? <a href="#">Send Again.</a></small>
+               <small id="emailHelp" class="form-text text-muted mt-4">Didn't receive a code? <a href="#">Send Again.</a></small>
                <small id="emailHelp" class="form-text text-muted"><a href="#">Send to a different cell phone number?</a></small>
                 </div>
               </div>
