--- a/onboarding/onboarding-6.html
+++ b/onboarding/onboarding-6.html
@@ -49,8 +49,8 @@
               <div class="row">
                   <div class="col-md-12 dg-column-start">
     
-                  <h1 class="dg-onboard">Securely logged in</h1>
-                <p class="dg-onboard">You have successfully logged in. Go to dashboard to start using Digital Gold.</p>
+                  <h1 class="dg-onboard-title">Securely logged in</h1>
+                <p class="dg-onboard-text">You have successfully logged in. Go to dashboard to start using Digital Gold.</p>
                
                 <button class="button button--dg button--border-thin button--text-thick button--text-upper button--size-s" data-text="Go to Dashboard"><span>Go to Dashboard</span></button>
                 </div>
